--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <!-- secton hero -->
 
       <section class="hero">
-         <div class="overlay">
+         <div class="container">
             <h1 class="hero-title">Эффективные решения<br>для вашего бизнеса </h1>
             <button type="button" class="primary-button">Заказать услугу</button>
          </div>
@@ -189,24 +189,24 @@
          <div class="container">
             <h2 class="section-title">Постоянные клиенты</h2>
             <ul class="list partners">
-               <li><a href="" class="partner-link"></a><svg class="partner-icon" width="41" height="47.6">
+               <li><a href="" class="partner-link"><svg class="partner-icon" width="41" height="47.6">
                      <use href="./images/icons.svg#client-1"></use>
-                  </svg></li>
-               <li><a href="" class="partner-link"></a><svg class="partner-icon" width="40" height="52">
+                  </svg></a></li>
+               <li><a href="" class="partner-link"><svg class="partner-icon" width="40" height="52">
                      <use href="./images/icons.svg#client-2"></use>
-                  </svg></li>
-               <li><a href="" class="partner-link"></a><svg class="partner-icon" width="43.46" height="41.18">
+                  </svg></a></li>
+               <li><a href="" class="partner-link"><svg class="partner-icon" width="43.46" height="41.18">
                      <use href="./images/icons.svg#client-3"></use>
-                  </svg></li>
-               <li><a href="" class="partner-link"></a><svg class="partner-icon" width="84.44" height="40.62">
+                  </svg></a></li>
+               <li><a href="" class="partner-link"><svg class="partner-icon" width="84.44" height="40.62">
                      <use href="./images/icons.svg#client-4"></use>
-                  </svg></li>
-               <li><a href="" class="partner-link"></a><svg class="partner-icon" width="62.54" height="45.43">
+                  </svg></a></li>
+               <li><a href="" class="partner-link"><svg class="partner-icon" width="62.54" height="45.43">
                      <use href="./images/icons.svg#client-5"></use>
-                  </svg></li>
-               <li><a href="" class="partner-link"></a><svg class="partner-icon" width="93.79" height="43.93">
+                  </svg></a></li>
+               <li><a href="" class="partner-link"><svg class="partner-icon" width="93.79" height="43.93">
                      <use href="./images/icons.svg#client-6"></use>
-                  </svg></li>
+                  </svg></a></li>
             </ul>
          </div>
       </section>
@@ -233,16 +233,16 @@
          <div class="block">
             <p class="join">Присоединяйтесь</p>
             <ul class="list actions holder">
-               <li><a href="" class="actions-link"><svg class="actions-icon holder">
+               <li><a href="" class="actions-link"><svg class="actions-icon">
                         <use href="./images/icons.svg#instagram"></use>
                      </svg></a></li>
-               <li><a href="" class="actions-link"><svg class="actions-icon holder">
+               <li><a href="" class="actions-link"><svg class="actions-icon">
                         <use href="./images/icons.svg#twitter"></use>
                      </svg></a></li>
-               <li><a href="" class="actions-link"><svg class="actions-icon holder">
+               <li><a href="" class="actions-link"><svg class="actions-icon">
                         <use href="./images/icons.svg#facebook"></use>
                      </svg></a></li>
-               <li><a href="" class="actions-link"><svg class="actions-icon holder">
+               <li><a href="" class="actions-link"><svg class="actions-icon">
                         <use href="./images/icons.svg#linkedin"></use>
                      </svg></a></li>
             </ul>
