--- a/index.html
+++ b/index.html
@@ -233,16 +233,16 @@
          <div class="block">
             <p class="join">Присоединяйтесь</p>
             <ul class="list actions holder">
-               <li><a href="" class="actions-link"><svg class="actions-icon">
+               <li><a href="" class="actions-link"><svg class="holder-icon">
                         <use href="./images/icons.svg#instagram"></use>
                      </svg></a></li>
-               <li><a href="" class="actions-link"><svg class="actions-icon">
+               <li><a href="" class="actions-link"><svg class="holder-icon">
                         <use href="./images/icons.svg#twitter"></use>
                      </svg></a></li>
-               <li><a href="" class="actions-link"><svg class="actions-icon">
+               <li><a href="" class="actions-link"><svg class="holder-icon">
                         <use href="./images/icons.svg#facebook"></use>
                      </svg></a></li>
-               <li><a href="" class="actions-link"><svg class="actions-icon">
+               <li><a href="" class="actions-link"><svg class="holder-icon">
                         <use href="./images/icons.svg#linkedin"></use>
                      </svg></a></li>
             </ul>
