--- a/portfolio.html
+++ b/portfolio.html
@@ -49,85 +49,85 @@
                <li class="item"><button type="button" class="button">Дизайн </button></li>
                <li class="item"><button type="button" class="button">Маркетинг </button></li>
             </ul>
-            <ul class="list page">
-               <li class="item">
-                  <a href="" class="link">
+            <ul class="list card-list">
+               <li class="cards-item">
+                  <a href="" class="link link-card">
                      <img src="./images/portfolio/website.jpg" alt="Технокряк" width="370">
-                     <div class="content">
+                     <div class="card-thumb">
                         <h3 class="features-title"> Технокряк</h3>
-                        <p>Веб-сайт</p>
+                        <p class="card-description">Веб-сайт</p>
                      </div>
                   </a>
                </li>
-               <li class="item">
-                  <a href="" class="link">
+               <li class="cards-item">
+                  <a href="" class="link link-card">
                      <img src="./images/portfolio/poster.jpg" alt="Постер New Orlean vs Golden Star" width="370">
-                     <div class="content">
+                     <div class="card-thumb">
                         <h3 class="features-title"> Постер New Orlean vs Golden Star </h3>
-                        <p>Frontend Developer </p>
+                        <p class="card-description">Frontend Developer </p>
                      </div>
                   </a>
                </li>
-               <li class="item">
-                  <a href="" class="link">
+               <li class="cards-item">
+                  <a href="" class="link link-card">
                      <img src="./images/portfolio/seafood.jpg" alt="Ресторан Seafood" width="370">
-                     <div class="content">
+                     <div class="card-thumb">
                         <h3 class="features-title"> Ресторан Seafood </h3>
-                        <p>Приложение</p>
+                        <p class="card-description">Приложение</p>
                      </div>
                   </a>
                </li>
-               <li class="item">
-                  <a href="" class="link">
+               <li class="cards-item">
+                  <a href="" class="link link-card">
                      <img src="./images/portfolio/prime.jpg" alt="Проект Prime" width="370">
-                     <div class="content">
+                     <div class="card-thumb">
                         <h3 class="features-title"> Проект Prime </h3>
-                        <p>Маркетинг</p>
+                        <p class="card-description">Маркетинг</p>
                      </div>
                   </a>
                </li>
-               <li class="item">
-                  <a href="" class="link">
+               <li class="cards-item">
+                  <a href="" class="link link-card">
                      <img src="./images/portfolio/boxes.jpg" alt="Проект Boxes" width="370">
-                     <div class="content">
+                     <div class="card-thumb">
                         <h3 class="features-title"> Проект Boxes </h3>
-                        <p>Приложение </p>
+                        <p class="card-description">Приложение </p>
                      </div>
                   </a>
                </li>
-               <li class="item">
-                  <a href="" class="link">
+               <li class="cards-item">
+                  <a href="" class="link link-card">
                      <img src="./images/portfolio/monitor.jpg" alt="Inspiration has no Borders" width="370">
-                     <div class="content">
+                     <div class="card-thumb">
                         <h3 class="features-title"> Inspiration has no Borders </h3>
-                        <p>Веб-сайт</p>
+                        <p class="card-description">Веб-сайт</p>
                      </div>
                   </a>
                </li>
-               <li class="item">
-                  <a href="" class="link">
+               <li class="cards-item">
+                  <a href="" class="link link-card">
                      <img src="./images/portfolio/edition.jpg" alt="Издание Limited Edition" width="370">
-                     <div class="content">
+                     <div class="card-thumb">
                         <h3 class="features-title"> Издание Limited Edition </h3>
-                        <p>Дизайн</p>
+                        <p class="card-description">Дизайн</p>
                      </div>
                   </a>
                </li>
-               <li class="item">
-                  <a href="" class="link">
+               <li class="cards-item">
+                  <a href="" class="link link-card">
                      <img src="./images/portfolio/lab.jpg" alt="Проект LAB" width="370">
-                     <div class="content">
+                     <div class="card-thumb">
                         <h3 class="features-title">Проект LAB</h3>
-                        <p>Маркетинг</p>
+                        <p class="card-description">Маркетинг</p>
                      </div>
                   </a>
                </li>
-               <li class="item">
-                  <a href="" class="link">
+               <li class="cards-item">
+                  <a href="" class="link link-card">
                      <img src="./images/portfolio/growing.jpg" alt="Growing Business" width="370">
-                     <div class="content">
+                     <div class="card-thumb">
                         <h3 class="features-title">Growing Business</h3>
-                        <p>Приложение</p>
+                        <p class="card-description">Приложение</p>
                      </div>
                   </a>
                </li>
